# dailies

./: .gitignore  AGENTS.md  AGENTS.src.md  CHANGELOG.md  LICENSE  README.md  STYLEGUIDE.md  great-docs.yml  pyproject.toml  scenarios.md
.claude/: settings.json
.claude/fragments/.gitignore/: gitignore-local.fragment.gitignore
.claude/fragments/AGENTS.md/: dailies-development-guide.fragment.md  layout.toml  python-style.fragment.md  releases.fragment.md
.claude/hooks/: audit.py  style.py  tasks.py  testing.py  toolchain.py
.github/workflows/: ci.yml  docs.yml  release-pypi.yml
.superset/: config.json
dailies/: __init__.py  __main__.py  activation.py  agent.py  bluebubbles.py  browser.py  cli.py  connections.py  db.py  discovery.py  documents.py  engine.py  gmail.py  interview.py  models.py  onepassword.py  profile.py  refresh.py  runtime.py  spend.py  state.py  storage.py  web.py
dailies/interface/: __init__.py  console.py  dailies.tcss  presenter.py  profile_view.py  rendering.py  screens.py  textual_app.py
dailies/tools/: __init__.py  action.py  base.py  inputs.py  profile.py  spend.py  state.py  vault.py
docs/scripts/: demo.sh
scripts/: simulate_interviews.py
tests/: conftest.py  factories.py  fakes.py  test_activation.py  test_agent.py  test_bluebubbles.py  test_browser.py  test_cli.py  test_connections.py  test_credentials.py  test_cron.py  test_discovery.py  test_draft_profile.py  test_engine.py  test_gmail.py  test_interface.py  test_interview.py  test_interview_persist.py  test_interview_tui.py  test_leases.py  test_models.py  test_onepassword.py  test_profile.py  test_profile_persistence.py  test_refresh.py  test_release_workflow_contract.py  test_rendering.py  test_spend.py  test_spend_persistence.py  test_state.py  test_state_tools.py  test_storage.py  test_subscriptions.py  test_tools.py  test_tui.py  test_web.py  test_workflow_completions.py
