[project]
name = "dly"
version = "0.1.0"
description = "Daily automation and scheduled task runner."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.8",
]

[project.scripts]
dly = "dailies.cli:main"

[project.urls]
Homepage = "https://github.com/yasyf/dailies"
Repository = "https://github.com/yasyf/dailies"
Issues = "https://github.com/yasyf/dailies/issues"
Changelog = "https://github.com/yasyf/dailies/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dailies"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
markers = [
    "unit: Pure unit tests",
    "integration: Integration tests",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["dailies"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py312"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
