[project]
name = "dly"
version = "0.1.0"
description = "Daily automation and scheduled task runner."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21",
    "anyio>=4.7",
    "beanie>=2",
    "browser-cookie3>=0.20.1",
    "browser-use>=0.13",
    "claude-agent-sdk>=0.2.94",
    "click>=8",
    "croniter>=3",
    "html2text>=2024.2.26",
    "httpx>=0.28",
    "loguru>=0.7",
    "pydantic>=2.11",
    "rich>=14",
    "stagehand>=3",
    "textual>=8",
    "tzlocal>=5.3.1",
    "uuid6>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.44",
    "testcontainers[mongodb]>=4",
    "docker",
]

[project.scripts]
dly = "dailies.cli:main"

[project.urls]
Homepage = "https://github.com/yasyf/dailies"
Repository = "https://github.com/yasyf/dailies"
Issues = "https://github.com/yasyf/dailies/issues"
Changelog = "https://github.com/yasyf/dailies/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dailies"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
anyio_mode = "auto"
markers = [
    "unit: Pure unit tests",
    "integration: Integration tests (Docker/Mongo)",
    "tui: Textual TUI pilot tests (no Mongo)",
]

# ty (Astral) is the default type checker — run `uv run ty check dailies`.
[tool.ty.rules]
unused-type-ignore-comment = "ignore"

# pyright is kept as a secondary checker (editors / `uvx pyright`) in basic mode.
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["dailies"]
venvPath = "."
venv = ".venv"
reportIncompatibleVariableOverride = "none"
reportUnknownVariableType = "none"
reportImplicitOverride = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
reportPrivateImportUsage = "none"
reportUnusedCallResult = "none"

[tool.ruff]
line-length = 120
target-version = "py314"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
